[package]
name = "SousaCli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tungstenite = "0.18.0"
url = "2.3.1"
